docs: Criada doc para create user
